src/snapshots/afrotd__parser__tests__rule_2.34.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 34
  - 1
title: Tackle Box
text: "\ta) Die Tackle Box ist die rechteckige Zone, die von der neutralen Zone, den beiden Linien, die sich jeweils parallel zu den Seitenlinien fünf Meter vom Snapper entfernt erstrecken, und Team A’s Endlinie gebildet wird (siehe Anhang A).\n\tb) Die Tackle Box ist aufgehoben, sobald der Ball die Zone erstmals verlassen hat. Regel 3 Perioden, Zeitfaktoren, Ersatzspieler"
interpretations: []
