src/snapshots/afrotd__parser__tests__rule_2.4.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 4
  - 3
title: "Catch, Interception und Recovery"
text: "\ta) Einen Ball zu fangen bedeutet, dass ein Spieler:\n\t\t1. einen fliegenden Live Ball fest mit seiner Hand, seinen Händen, seinem Arm oder seinen Armen in Besitz nimmt, bevor der Ball den Boden berührt und\n\t\t2. inbounds mit irgendeinem Teil seines Körpers den Boden berührt und dann\n\t\t3. den Ball lange genug kontrolliert, um eine footballtypische Aktion auszuführen, beispielsweise lang genug, um den Ball zu werfen, zu übergeben, mit ihm zu laufen, einen Gegner abzuwehren oder einem Gegner auszuweichen etc. und\n\t\t4. die nachfolgenden Punkte b), c) und d) erfüllt.\n\tb) Wenn ein Spieler, mit oder ohne gegnerischen Kontakt, im Spielfeld oder in einer Endzone zu Boden fällt, während er einen Pass fängt, muss er während des Fallens die vollständige und durchgehende Kontrolle über den Ball behalten. Das gilt auch für einen Spieler, der einen Ball inbounds an der Seitenlinie fängt und im Aus zu Boden fällt. Verliert er die Kontrolle über den Ball, der dann seinerseits den Boden berührt, bevor der Spieler erneut die Kontrolle über den Ball erlangen kann, ist das Fangen nicht vollständig. Erlangt der Spieler inbounds erneut Kontrolle über den Ball, bevor dieser den Boden berühren kann, ist das Fangen vollständig.\n\tc) Verliert der Spieler die Kontrolle über den Ball, während er gleichzeitig mit irgendeinem Körperteil den Boden berührt oder wenn es Zweifel darüber gibt, ob die Aktionen gleichzeitig sind, ist das kein Fangen. Hat ein Spieler den Ball unter Kontrolle, bedeutet ein leichtes Bewegen des Balles in seinen Händen oder Armen nicht, dass der Ballbesitz verloren ging. Der Spieler muss die Kontrolle über den Ball verlieren, damit ein Verlust des Ballbesitzes begründet wird.\n\td) Wenn der Ball den Boden berührt, nachdem ein Spieler die Kontrolle über den Ball erlangt hat und diese Kontrolle weiterhin behält und alle oben aufgeführten Merkmale erfüllt sind, ist das Fangen vollständig.\n\te) Interception (Abfangen) ist das Fangen eines gegnerischen Fumbles oder Passes.\n\tf) Ein Fangen durch einen knienden oder liegenden Spieler inbounds bedeutet die Vervollständigung des Fangens oder Abfangens (Regeln 7.3.6 und 7.3.7).\n\tg) Ein Spieler recovert einen Ball, wenn er die Voraussetzungen der oben aufgeführten Punkte a) bis d) für das Fangen eines Balles erfüllt hat, nachdem ein Live Ball den Boden berührt hat.\n\th) Im Zweifel ist das Fangen, Abfangen oder Recovern nicht vollständig."
interpretations: []
