src/snapshots/afrotd__parser__tests__rule_2.7.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 7
  - 2
title: Zeitraum zwischen den Downs
text: "Die Zeit zwischen den Downs ist der Zeitraum, in dem der Ball dead ist."
interpretations: []
